src/index.css
:root {
  --headings: #2c1a0e; /* Headings, nav */
  --links: #ba7517; /* CTA buttons, links */
  --accents: #ef9f27; /* Accents, tags */
  --background: #fffaf5; /* Page background */
  --dark-background: #1c1208; /* Code block */
  --body-text: #5c3d22; /* Body text */
  --secondary-text: #8b5e3c; /* Secondary text */
  --borders: #e8d5c0; /* Borders, dividers */
  --card: #fffdf9; /* Cards, surfaces */
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Import Headings Font */
@font-face {
  font-family: "SpaceGrotesk";
  src: url("assets/SpaceGrotesk-VariableFont_wght.ttf") format("woff2");
}

/* Set Body Font */
body {
  font-family: "Inter", sans-serif;
}

/* Set Headings Font */
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "SpaceGrotesk", sans-serif;
}

